@@ -97,6 +97,10 @@ fi
 /etc/logrotate.d/elastixdialer
 
 %changelog
+* Mon May 13 2013 Alex Villacis Lasso <a_villacis@palosanto.com>
+- FIXED: Dialer (ECCP): check that target extension for transfer is entirely
+  numeric. Fixes Elastix bug #1553.
+
 * Tue Apr 30 2013 Alex Villacis Lasso <a_villacis@palosanto.com> 2.2.0-1
 - Bump version for release.
 
